Terumo Partdev/src/objects/Account_Share_Log__c.object
<CustomObject>
    <description>nsebastian 11/6/2015: This is a setup object to log details of when an Account is shared, to run a batch to delete the record on expiry.</description>
    <fields>
        <fullName>AccountShareID__c</fullName>
        <description>nsebastian 11/6/2015 : Id of the Account Share record.</description>
        <label>AccountShareID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>nsebastian 11/12/2015: This is a lookup to the Account record being shared.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Share Logs</relationshipLabel>
        <relationshipName>Account_Share_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>nsebastian 11/6/2015 : The date of expiry for the record.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>nsebastian 11/12/2015: This field indicates which corresponding AccountShare records were processed by the batch job</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>nsebastian 11/12/2015: This is a lookup to the User  with whom the Account is shared</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Share_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Share Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountShareID__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASLOG-{000000}</displayFormat>
        <label>Account Share Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Share Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>